[tool.poetry]
name = "treeo"
version = "0.0.5"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cgarciae/treeo"
homepage = "https://cgarciae.github.io/treeo"

[tool.poetry.dependencies]
python = "^3.7"
jax = "^0.2.18"
jaxlib = "^0.1.70"
typing-extensions = ">=3.7.0"

[tool.poetry.dev-dependencies]
matplotlib = { version = "^3.4.3", python = ">=3.7" }
pytest = "^5.2"
black = {version = "^21.7b0", allow-prereleases = true, python = ">=3.6.2" }
pre-commit = "^2.14.0"
isort = "^5.9.3"
mkdocs = "^1.2.2"
mkdocstrings = "^0.15.2"
mkdocs-jupyter = { version = "^0.17.3", python = ">=3.7" }
mkdocs-material = "^7.2.8"
rich = "^10.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
